5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1592_1800.log
== TEST (2019-03-29 20:37:42) 
-- CODE:
print(round(a,7))
print(round(b,7))
print(round(c,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(a,7))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:37:48) 
-- CODE:
print(round(a,7))
print(round(b,7))
print(round(c,7))
-- EXECUTION TIME:
0.171412
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 1, in <module>
    print(round(a,7))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:39:11) 
-- CODE:
print(round(a+b+c=0,7))
-- ERROR:
File "XXXX", line 1
    print(round(a+b+c=0,7))
               ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:39:14) 
-- CODE:
print(round(a+b+c=0,7))
-- EXECUTION TIME:
0.179566
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 1
    print(round(a+b+c=0,7))
               ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:35) 
-- CODE:
a=1
b=2
c=3
vai1= (a**2+b**2+c**2)/(a+b+c)
print(round("var1",7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:34) 
-- CODE:
a=1
b=2
c=3
vai1=(a**2 + b**2 + c**2)/(a + b + c)
print(round("var1",7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:46:36) 
-- CODE:
a=1
b=2
c=3
vai1=(a**2 + b**2 + c**2)/(a + b + c)
print(round("var1",7))
-- EXECUTION TIME:
0.143739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:16) 
-- CODE:
a=1
b=2
c=3
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round("var1",7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:19) 
-- CODE:
a=1
b=2
c=3
var1=(a**2 + b**2 +c**2)/(a+b+c)
print(round("var1",7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:21) 
-- CODE:
a=1
b=2
c=3
var1=(a**2 + b**2 +c**2)/(a+b+c)
print(round("var1",7))
-- EXECUTION TIME:
0.123966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round("var1",7))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:28) 
-- CODE:
a=1
b=2
c=3
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round("var",7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("var",7))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:30) 
-- CODE:
a=1
b=2
c=3
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round("var",7))
-- EXECUTION TIME:
0.207711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round("var",7))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:59) 
-- CODE:
a=1
b=2
c=3
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:01) 
-- CODE:
a=1
b=2
c=3
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- EXECUTION TIME:
0.215812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:48) 
-- CODE:
a=input
b=input
c=input
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vai1=(a**2 + b**2 +c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:50) 
-- CODE:
a=input
b=input
c=input
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- EXECUTION TIME:
0.191233
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 4, in <module>
    vai1=(a**2 + b**2 +c**2)/(a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:48) 
-- CODE:
a=int(input())
b=int(input())
c=int(input())
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- EXECUTION TIME:
0.118497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:49) 
-- CODE:
a=int(input())
b=int(input())
c=int(input())
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:29) 
-- CODE:
a=int(input("digite a"))
b=int(input("digite b"))
c=int(input("digite c"))
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:16:42) 
-- CODE:
a=int(input("digite a"))
b=int(input("digite b"))
c=int(input("digite c"))
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- EXECUTION TIME:
0.1663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:16:49) 
-- CODE:
a=int(input("digite a"))
b=int(input("digite b"))
c=int(input("digite c"))
vai1=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var1,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var1,7))
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:17:20) 
-- CODE:
a=int(input("digite a"))
b=int(input("digite b"))
c=int(input("digite c"))
vai=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var,7))
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:17:46) 
-- CODE:
a=int(input("digite: a"))
b=int(input("digite: b"))
c=int(input("digite: c"))
vai=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var,7))
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:17:53) 
-- CODE:
a=int(input("digite: a"))
b=int(input("digite: b"))
c=int(input("digite: c"))
vai=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var,7))
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:18:18) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
vai=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(var,7))
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:26:16) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:26:27) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- EXECUTION TIME:
0.183447
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:34:10) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:34:10) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- EXECUTION TIME:
0.126539
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:34:13) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7)
-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:34:19) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- EXECUTION TIME:
0.178782
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:34:32) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:34:46) 
-- CODE:
a=int(input("digite: "))
b=int(input("digite: "))
c=int(input("digite: "))
var=(a**2 + b**2 +c**2)/(a+b+c)
print(round(var,7))
-- EXECUTION TIME:
0.166677
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
